# evolvo-goalvo

./: .env.example  .env.test  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: bot.py  main.py
app/api/: dependencies.py  errors.py
app/core/: config.py  lifespan.py  logging.py  rate_limit.py  security.py  timezones.py
app/domain/: entities.py  enums.py  events.py  probabilities.py
app/features/: availability_features.py  base.py  context_features.py  data_quality_features.py  lineup_features.py  live_features.py  pre_match_features.py  team_strength.py
app/forecasting/: calibration.py  classifiers.py  dixon_coles.py  elo.py  ensemble.py  knockout.py  live_simulation.py  market.py  poisson.py  registry.py
app/observability/: metrics.py
app/repositories/: catalog.py  (+5 more)
configs/: competition_rules.json  provider_aliases.json  team_localization_ar.json  team_profiles.json  thesportsdb_team_map.json  world_football_elo_code_map.json
docs/: data-source-assessment.md  limitations.md  model-card-live-simulation-v1.md  model-card-prematch-demo.md  modelling-decisions.md  research.md
scripts/: backtest.py  calibrate_models.py  download_open_data.py  evaluate_live_replay.py  evaluate_prediction_signal.py  evaluate_real_worldcup_provider.py  evaluate_telegram_buttons.py  evaluate_world_cup_scope.py  import_historical_matches.py  llm_provider_smoke_test.py  provider_smoke_test.py  refresh_world_football_elo.py  replay_match.py  run_demo.py  seed_prediction_archive.py  train_models.py
(+78 files in other folders)
