[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "arabic-football-forecast-agent"
version = "0.1.0"
description = "Offline-first probabilistic football forecasting backend with Arabic explanations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Project Contributors"}]
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.50.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "aiosqlite==0.22.1",
  "alembic==1.18.5",
  "httpx==0.28.1",
  "numpy==2.4.6",
  "python-telegram-bot==22.8",
  "prometheus-client==0.25.0",
  "python-json-logger==3.3.0",
]

[project.optional-dependencies]
llm = [
  "google-genai>=1.0,<2.0",
  "openai>=1.60,<3.0",
  "anthropic>=0.40,<1.0",
  "litellm>=1.60,<2.0",
]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.4.0",
  "hypothesis==6.156.1",
  "ruff==0.15.20",
]
plots = ["matplotlib>=3.9,<4.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
